fix: add missing Current Affairs steps & polish some things (#2471)
* modernize getPanels

* modernize getUnlockRewards

* modernize getItemRewards

* modernize getExperienceRewards

* modernize getItemRequirements

* remove unused setupZones

* reorder functions

* Reorder steps roughly according to order

* fix: add "grab charcoal" as a substep so it properly highlights the sidebar

* fix: remove blank requirement for "hand over filled form" step

* Uncapitalize fishbowl

* fix: get new mayor missing sidebar step

* nit: update wording for "mayor of catherby"

* nit: rephrase signed form

* fix: clean up duck release & collect steps

* nit: free inv slot requirements

* Add to sidebar test