@@ -28,8 +28,10 @@ import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
 import com.questhelper.questinfo.QuestHelperQuest;
 import com.questhelper.requirements.Requirement;
+import com.questhelper.requirements.conditional.NpcCondition;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.npc.NpcRequirement;
+import com.questhelper.requirements.player.FreeInventorySlotRequirement;
 import com.questhelper.requirements.player.SkillRequirement;
 import com.questhelper.requirements.quest.QuestRequirement;
 import static com.questhelper.requirements.util.LogicHelper.and;
@@ -48,7 +50,6 @@ import com.questhelper.steps.ObjectStep;
 import com.questhelper.steps.QuestStep;
 import com.questhelper.steps.SailStep;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -62,14 +63,70 @@ import net.runelite.api.gameval.VarbitID;
 
 public class CurrentAffairs extends BasicQuestHelper
 {
-	ItemRequirement charcoalRequirement, coinsRequirement, hasFormCr4p, hasTinyNet, hasMayoralFishbowl, hasMayor, hasForm7r45h, hasForm7r45hSigned, hasDuck;
-	Requirement filledFormCr4p, formCr4pGiven, boughtFishbowl, auditStarted, onboardShip, duckCanBeFollowed, catherbyCharted;
-	NpcStep startQuest, talkToCouncillor, handOverFormCr4p, talkAfterFormHandedIn, talkToArhein, talkToHarry, getNewFishbowl, showArheinMayor, getNewMayor, showCatherineMayor, doAudit, getForm7r45h, showCatherineForm, giveArheimNews, getDuck, showCurrentsArhein;
-	ObjectStep grabCharcoal, fishInAquarium;
-	DetailedQuestStep fillFormCr4p, signForm7r45h, followThatDuck;
-	ConditionalStep cGetMayor, cShowCatherineMayor, cSign7r45h, cBoardShip, cSailToStart;
+	// Required items
+	ItemRequirement charcoalRequirement;
+	ItemRequirement coinsRequirement;
+
+	// Mid-quest item requirements
+	ItemRequirement hasFormCr4p;
+	ItemRequirement hasTinyNet;
+	ItemRequirement hasMayoralFishbowl;
+	ItemRequirement hasMayor;
+	ItemRequirement hasForm7r45h;
+	ItemRequirement hasForm7r45hSigned;
+	ItemRequirement hasDuck;
+
+	// Miscellaneous requirements
+	Requirement filledFormCr4p;
+	Requirement formCr4pGiven;
+	Requirement boughtFishbowl;
+	Requirement auditStarted;
+	Requirement onboardShip;
+	Requirement duckCanBeFollowed;
+	Requirement duckHasStopped;
+	Requirement catherbyCharted;
+	FreeInventorySlotRequirement twoFreeInvSlots;
+	FreeInventorySlotRequirement oneFreeInvSlot;
+
+	// Steps
+	NpcStep startQuest;
+
+	NpcStep talkToCouncillor;
+
+	ObjectStep grabCharcoal;
+	DetailedQuestStep fillFormCr4p;
+	NpcStep handOverFormCr4p;
+	NpcStep talkAfterFormHandedIn;
+
+	NpcStep talkToArhein;
+
+	NpcStep talkToHarry;
+	NpcStep getNewFishbowl;
+	NpcStep showArheinMayor;
+	ObjectStep fishInAquarium;
+	ConditionalStep cGetMayor;
+
+	NpcStep getNewMayor;
+	NpcStep showCatherineMayor;
+	NpcStep doAudit;
+	ConditionalStep cShowCatherineMayor;
+
+	NpcStep getForm7r45h;
+	DetailedQuestStep signForm7r45h;
+	NpcStep showCatherineForm;
+	ConditionalStep cSign7r45h;
+
+	NpcStep giveArheimNews;
+
+	NpcStep getDuck;
 	BoardShipStep boardShip;
 	SailStep sailToStart;
+	DetailedQuestStep releaseDuck;
+	DetailedQuestStep followThatDuck;
+	NpcStep collectDuck;
+	NpcStep showCurrentsArhein;
+	ConditionalStep cBoardShip;
+	ConditionalStep cSailToStart;
 
 	private static final Map<Integer, String> q1Answers = Map.of(1, "Pleasure.", 2, "Trade.", 3, "Piracy.");
 	private static final Map<Integer, String> q2Answers = Map.of(1, "0", 2, "1", 3, "2+");
@@ -81,10 +138,135 @@ public class CurrentAffairs extends BasicQuestHelper
 	private static final Map<Integer, String> q8Answers = Map.of(1, "Varrock.", 2, "Falador.", 3, "Edgeville.");
 
 	@Override
+	protected void setupRequirements()
+	{
+		//Quest Requirements
+		charcoalRequirement = new ItemRequirement("Charcoal", ItemID.CHARCOAL).isNotConsumed().canBeObtainedDuringQuest();
+		charcoalRequirement.setTooltip("You can pick this up in the cabinet near Councillor Catherine in the north-east of Catherby.");
+		coinsRequirement = new ItemRequirement("Coins", ItemID.COINS, 50);
+
+		hasFormCr4p = new ItemRequirement("Form cr-4p", ItemID.CURRENT_AFFAIRS_FORM);
+		hasFormCr4p.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
+		hasForm7r45h = new ItemRequirement("Form 7r4-5h", ItemID.CURRENT_AFFAIRS_FORM_2);
+		hasForm7r45h.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
+		hasForm7r45hSigned = new ItemRequirement("Form 7r4-5h", ItemID.CURRENT_AFFAIRS_FORM_2_SIGNED);
+		hasForm7r45hSigned.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
+
+		hasTinyNet = new ItemRequirement("Tiny net", ItemID.TINY_NET).isNotConsumed().canBeObtainedDuringQuest();
+		hasTinyNet.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
+		hasMayoralFishbowl = new ItemRequirement("Mayoral fishbowl", ItemID.CURRENT_AFFAIRS_MAYORAL_FISHBOWL).canBeObtainedDuringQuest().isNotConsumed();
+		hasMayoralFishbowl.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
+		hasMayor = new ItemRequirement("Mayor of Catherby", ItemID.CURRENT_AFFAIRS_MAYOR_OF_CATHERBY).canBeObtainedDuringQuest().isNotConsumed();
+		hasMayor.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
+
+		hasDuck = new ItemRequirement("Current Duck", ItemID.SAILING_CHARTING_CURRENT_DUCK).canBeObtainedDuringQuest().isNotConsumed();
+		hasForm7r45hSigned.setTooltip("You can receive a new one from Arheim on the Catherby Docks.");
+
+		duckCanBeFollowed = new NpcRequirement(NpcID.SAILING_CHARTING_CURRENT_DUCK_MOVING);
+		duckHasStopped = new NpcCondition(NpcID.SAILING_CHARTING_CURRENT_DUCK_STOPPED, new WorldPoint(2802, 3322, 0));
+
+		filledFormCr4p = and(
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q1, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q2, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q3, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q4, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q5, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q6, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q7, 0, Operation.GREATER),
+			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q8, 0, Operation.GREATER));
+		formCr4pGiven = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_GIVEN, 1);
+		boughtFishbowl = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_KIT_PURCHASED, 1);
+		auditStarted = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_AUDIT_START, 1);
+		onboardShip = new VarbitRequirement(VarbitID.SAILING_BOARDED_BOAT, 1);
+		catherbyCharted = new VarbitRequirement(VarbitID.SAILING_CHARTING_CURRENT_DUCK_CATHERBY_BAY_COMPLETE, 1);
+
+		charcoalRequirement.setConditionToHide(filledFormCr4p);
+		coinsRequirement.setConditionToHide(boughtFishbowl);
+
+		twoFreeInvSlots = new FreeInventorySlotRequirement(2);
+		oneFreeInvSlot = new FreeInventorySlotRequirement(1);
+	}
+
+	public void setupSteps()
+	{
+		startQuest = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the northern part of the Catherby Docks to start the quest.", true);
+		startQuest.addDialogStep("What's with the duck?");
+		startQuest.addDialogStep("Yes.");
+
+		talkToCouncillor = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine in the north-east of Catherby.");
+		talkAfterFormHandedIn = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Finish talking to Councillor Catherine in the north-east of Catherby.");
+		grabCharcoal = new ObjectStep(this, ObjectID.CURRENT_AFFAIRS_CABINET, new WorldPoint(2827, 3453, 0), "Grab a piece of charcoal from the cabinet.");
+		fillFormCr4p = new DetailedQuestStep(this, "Fill form cr-4p. The answers you provide do not matter.", hasFormCr4p.highlighted(), charcoalRequirement);
+		fillFormCr4p.addSubSteps(grabCharcoal);
+
+		//Answer values range from 1-3
+		fillFormCr4p.addDialogSteps("Pleasure.", "Trade.", "Piracy.");
+		fillFormCr4p.addDialogSteps("0", "1", "2+");
+		fillFormCr4p.addDialogSteps("Cargo spillage.", "Theft.", "Both.");
+		fillFormCr4p.addDialogSteps("No.", "Yes.", "Partial.");
+		fillFormCr4p.addDialogSteps("Partial.", "No.", "Yes.");
+		fillFormCr4p.addDialogSteps("Yes.", "Partial.", "No.");
+		fillFormCr4p.addDialogSteps("Less than a month.", "Less than a year.", "A year or more.");
+		fillFormCr4p.addDialogSteps("Varrock.", "Falador.", "Edgeville.");
+
+		handOverFormCr4p = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Hand over the filled form to Councillor Catherine.", hasFormCr4p);
+		handOverFormCr4p.addDialogStep("Yes, I have it here.");
+
+		talkToArhein = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the docks about the mayor.", true);
+		talkToArhein.addDialogStep("I need to find the Mayor of Catherby.");
+
+		talkToHarry = new NpcStep(this, NpcID.HARRY, new WorldPoint(2831, 3444, 0), "Talk to Harry in the fish shop in south-east Catherby about a new mayor.", true, coinsRequirement, twoFreeInvSlots);
+		talkToHarry.addDialogStep("I'm here about the mayor.");
+		talkToHarry.addDialogStep("Yes.");
+		fishInAquarium = new ObjectStep(this, ObjectID.AQUARIUM, new WorldPoint(2831, 3444, 0), "Fish a new mayor from the aquarium.", true, hasTinyNet, hasMayoralFishbowl);
+		getNewFishbowl = new NpcStep(this, NpcID.HARRY, new WorldPoint(2831, 3444, 0), "Talk to Harry in the fish shop in south-east Catherby about a new mayoral fishbowl.", true);
+		getNewFishbowl.addDialogStep("I'm here about the mayor.");
+		talkToHarry.addSubSteps(getNewFishbowl);
+		showArheinMayor = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Introduce Arhein on the Catherby docks to the new Mayor of Catherby.", true, hasMayor);
+		showArheinMayor.addDialogStep("About the mayor...");
+		showCatherineMayor = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine about changing the by-laws.", hasMayor);
+		showCatherineMayor.addDialogStep("Yes, I have it here.");
+		getNewMayor = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the Catherby docks for a new mayor.", true);
+		getNewMayor.addDialogStep("About the mayor...");
+		showCatherineMayor.addSubSteps(getNewMayor);
+
+		doAudit = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine to complete the audit.");
+		doAudit.addDialogConsideringLastLineAndVarbit("What is your main reason for making port at Catherby?", VarbitID.CURRENT_AFFAIRS_FORM_Q1, q1Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("How many hulls does your ship have?", VarbitID.CURRENT_AFFAIRS_FORM_Q2, q2Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("Is your ship insured against cargo spillage and theft?", VarbitID.CURRENT_AFFAIRS_FORM_Q3, q3Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("Does your first mate have first aid training?", VarbitID.CURRENT_AFFAIRS_FORM_Q4, q4Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("Does your second mate have second aid training?", VarbitID.CURRENT_AFFAIRS_FORM_Q5, q5Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("Have you experienced symptoms of plague in the last two weeks?", VarbitID.CURRENT_AFFAIRS_FORM_Q6, q6Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("How much experience do you have sailing?", VarbitID.CURRENT_AFFAIRS_FORM_Q7, q7Answers);
+		doAudit.addDialogConsideringLastLineAndVarbit("Where would you say your home port is?", VarbitID.CURRENT_AFFAIRS_FORM_Q8, q8Answers);
+
+		getForm7r45h = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine in the north-east of Catherby to receive a new form 7r4-5h.", oneFreeInvSlot);
+		signForm7r45h = new DetailedQuestStep(this, "Use form 7r4-5h on the Mayor of Catherby.", hasForm7r45h.highlighted(), hasMayor.highlighted());
+		showCatherineForm = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Show Councillor Catherine the signed form.", hasForm7r45hSigned);
+
+		giveArheimNews = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Give Arhein on the Catherby docks the good news.", true);
+		giveArheimNews.addDialogStep("The by-law has been changed!");
+
+		// TODO: We might be able to check if the duck is in the cargo hold and only recommend that?
+		getDuck = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Get a new duck from Arhein on the Catherby docks, or from your ship's cargo hold.", true);
+		getDuck.addDialogStep("About that duck...");
+
+		boardShip = new BoardShipStep(this, hasDuck);
+		sailToStart = new SailStep(this, new WorldPoint(2835, 3418, 0), "Sail to the small island east of Catherby, then release the Current duck.", hasDuck);
+		releaseDuck = new DetailedQuestStep(this, "Release the Current duck.", hasDuck.highlighted());
+
+		followThatDuck = new DetailedQuestStep(this, new WorldPoint(2802, 3322, 0), "Follow the Current duck! It'll end up south-west of Entrana."); //It ends up at (2802,3322,0)
+
+		collectDuck = new NpcStep(this, NpcID.SAILING_CHARTING_CURRENT_DUCK_STOPPED, "Collect your Current duck.");
+
+		showCurrentsArhein = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Share what you've learned with Arhein on the Catherby docks.", true);
+		showCurrentsArhein.addDialogStep("I've charted the currents!");
+	}
+
+	@Override
 	public Map<Integer, QuestStep> loadSteps()
 	{
 		initializeRequirements();
-		setupConditions();
 		setupSteps();
 		Map<Integer, QuestStep> steps = new HashMap<>();
 		steps.put(0, startQuest);
@@ -117,134 +299,33 @@ public class CurrentAffairs extends BasicQuestHelper
 		cBoardShip.setShouldPassthroughText(true);
 		cBoardShip.addStep(and(not(catherbyCharted), hasDuck, not(onboardShip)), boardShip);
 		cSailToStart = new ConditionalStep(this, cBoardShip);
-		cSailToStart.addStep(and(not(catherbyCharted), hasDuck, onboardShip), sailToStart);
-		cSailToStart.addStep(duckCanBeFollowed, followThatDuck);
 		cSailToStart.addStep(catherbyCharted, showCurrentsArhein);
+		cSailToStart.addStep(and(not(catherbyCharted), hasDuck, onboardShip, sailToStart.getZoneRequirement()), releaseDuck);
+		cSailToStart.addStep(and(not(catherbyCharted), hasDuck, onboardShip), sailToStart);
+		cSailToStart.addStep(duckHasStopped, collectDuck);
+		cSailToStart.addStep(duckCanBeFollowed, followThatDuck);
 		steps.put(40, cSailToStart);
 		return steps;
 	}
 
-	public void setupConditions()
+	@Override
+	public List<Requirement> getGeneralRequirements()
 	{
-		filledFormCr4p = and(
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q1, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q2, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q3, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q4, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q5, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q6, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q7, 0, Operation.GREATER),
-			new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_Q8, 0, Operation.GREATER));
-		formCr4pGiven = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_FORM_GIVEN, 1);
-		boughtFishbowl = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_KIT_PURCHASED, 1);
-		auditStarted = new VarbitRequirement(VarbitID.CURRENT_AFFAIRS_AUDIT_START, 1);
-		onboardShip = new VarbitRequirement(VarbitID.SAILING_BOARDED_BOAT, 1);
-		catherbyCharted = new VarbitRequirement(VarbitID.SAILING_CHARTING_CURRENT_DUCK_CATHERBY_BAY_COMPLETE, 1);
-
-		charcoalRequirement.setConditionToHide(filledFormCr4p);
-		coinsRequirement.setConditionToHide(boughtFishbowl);
+		return List.of(
+			new QuestRequirement(QuestHelperQuest.PANDEMONIUM, QuestState.FINISHED),
+			new SkillRequirement(Skill.SAILING, 22, false),
+			new SkillRequirement(Skill.FISHING, 10, false),
+			twoFreeInvSlots
+		);
 	}
 
 	@Override
-	protected void setupZones()
+	public List<ItemRequirement> getItemRequirements()
 	{
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		//Quest Requirements
-		charcoalRequirement = new ItemRequirement("Charcoal", ItemID.CHARCOAL).isNotConsumed().canBeObtainedDuringQuest();
-		charcoalRequirement.setTooltip("You can pick this up in the cabinet near Councillor Catherine in the north-east of Catherby.");
-		coinsRequirement = new ItemRequirement("Coins", ItemID.COINS, 50);
-
-		hasFormCr4p = new ItemRequirement("Form cr-4p", ItemID.CURRENT_AFFAIRS_FORM);
-		hasFormCr4p.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
-		hasForm7r45h = new ItemRequirement("Form 7r4-5h", ItemID.CURRENT_AFFAIRS_FORM_2);
-		hasForm7r45h.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
-		hasForm7r45hSigned = new ItemRequirement("Form 7r4-5h", ItemID.CURRENT_AFFAIRS_FORM_2_SIGNED);
-		hasForm7r45hSigned.setTooltip("You can receive a new one from Councillor Catherine in the north-east of Catherby.");
-
-		hasTinyNet = new ItemRequirement("Tiny net", ItemID.TINY_NET).isNotConsumed().canBeObtainedDuringQuest();
-		hasTinyNet.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
-		hasMayoralFishbowl = new ItemRequirement("Mayoral Fishbowl", ItemID.CURRENT_AFFAIRS_MAYORAL_FISHBOWL).canBeObtainedDuringQuest().isNotConsumed();
-		hasMayoralFishbowl.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
-		hasMayor = new ItemRequirement("Mayor of Catherby", ItemID.CURRENT_AFFAIRS_MAYOR_OF_CATHERBY).canBeObtainedDuringQuest().isNotConsumed();
-		hasMayor.setTooltip("You can receive a new one in the fish shop in the south-east of Catherby.");
-
-		boardShip = new BoardShipStep(this, hasDuck);
-		sailToStart = new SailStep(this, new WorldPoint(2835, 3418, 0), hasDuck);
-
-		hasDuck = new ItemRequirement("Current Duck", ItemID.SAILING_CHARTING_CURRENT_DUCK).canBeObtainedDuringQuest().isNotConsumed();
-		hasForm7r45hSigned.setTooltip("You can receive a new one from Arheim on the Catherby Docks.");
-
-		duckCanBeFollowed = new NpcRequirement(NpcID.SAILING_CHARTING_CURRENT_DUCK_MOVING);
-	}
-
-	public void setupSteps()
-	{
-		startQuest = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the northern part of the Catherby Docks to start the quest.", true);
-		startQuest.addDialogStep("What's with the duck?");
-		startQuest.addDialogStep("Yes.");
-
-		talkToCouncillor = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine in the north-east of Catherby.");
-		talkAfterFormHandedIn = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Finish talking to Councillor Catherine in the north-east of Catherby.");
-		grabCharcoal = new ObjectStep(this, ObjectID.CURRENT_AFFAIRS_CABINET, new WorldPoint(2827, 3453, 0), "Grab a piece of charcoal from the cabinet.");
-		fillFormCr4p = new DetailedQuestStep(this, "Fill form cr-4p. The answers you provide do not matter.", hasFormCr4p.highlighted(), charcoalRequirement);
-
-		//Answer values range from 1-3
-		fillFormCr4p.addDialogSteps("Pleasure.", "Trade.", "Piracy.");
-		fillFormCr4p.addDialogSteps("0", "1", "2+");
-		fillFormCr4p.addDialogSteps("Cargo spillage.", "Theft.", "Both.");
-		fillFormCr4p.addDialogSteps("No.", "Yes.", "Partial.");
-		fillFormCr4p.addDialogSteps("Partial.", "No.", "Yes.");
-		fillFormCr4p.addDialogSteps("Yes.", "Partial.", "No.");
-		fillFormCr4p.addDialogSteps("Less than a month.", "Less than a year.", "A year or more.");
-		fillFormCr4p.addDialogSteps("Varrock.", "Falador.", "Edgeville.");
-
-		handOverFormCr4p = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Hand over the filled form to Councillor Catherine.", filledFormCr4p, hasFormCr4p);
-		handOverFormCr4p.addDialogStep("Yes, I have it here.");
-
-		talkToArhein = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the docks about the mayor.", true);
-		talkToArhein.addDialogStep("I need to find the Mayor of Catherby.");
-
-		talkToHarry = new NpcStep(this, NpcID.HARRY, new WorldPoint(2831, 3444, 0), "Talk to Harry in the fish shop in south-east Catherby about a new mayor.", true, coinsRequirement);
-		talkToHarry.addDialogStep("I'm here about the mayor.");
-		talkToHarry.addDialogStep("Yes.");
-		fishInAquarium = new ObjectStep(this, ObjectID.AQUARIUM, new WorldPoint(2831, 3444, 0), "Fish a new mayor from the aquarium.", true, hasTinyNet, hasMayoralFishbowl);
-		getNewFishbowl = new NpcStep(this, NpcID.HARRY, new WorldPoint(2831, 3444, 0), "Talk to Harry in the fish shop in south-east Catherby about a new mayoral fishbowl.", true);
-		getNewFishbowl.addDialogStep("I'm here about the mayor.");
-		talkToHarry.addSubSteps(getNewFishbowl);
-		showArheinMayor = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Introduce Arhein on the Catherby docks to the new Mayor of Catherby.", true, hasMayor);
-		showArheinMayor.addDialogStep("About the mayor...");
-		showCatherineMayor = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine about changing the by-laws.", hasMayor);
-		showCatherineMayor.addDialogStep("Yes, I have it here.");
-		getNewMayor = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Talk to Arhein on the Catherby docks for a new mayor.", true);
-		getNewMayor.addDialogStep("About the mayor...");
-
-		doAudit = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine to complete the audit.");
-		doAudit.addDialogConsideringLastLineAndVarbit("What is your main reason for making port at Catherby?", VarbitID.CURRENT_AFFAIRS_FORM_Q1, q1Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("How many hulls does your ship have?", VarbitID.CURRENT_AFFAIRS_FORM_Q2, q2Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("Is your ship insured against cargo spillage and theft?", VarbitID.CURRENT_AFFAIRS_FORM_Q3, q3Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("Does your first mate have first aid training?", VarbitID.CURRENT_AFFAIRS_FORM_Q4, q4Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("Does your second mate have second aid training?", VarbitID.CURRENT_AFFAIRS_FORM_Q5, q5Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("Have you experienced symptoms of plague in the last two weeks?", VarbitID.CURRENT_AFFAIRS_FORM_Q6, q6Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("How much experience do you have sailing?", VarbitID.CURRENT_AFFAIRS_FORM_Q7, q7Answers);
-		doAudit.addDialogConsideringLastLineAndVarbit("Where would you say your home port is?", VarbitID.CURRENT_AFFAIRS_FORM_Q8, q8Answers);
-
-		getForm7r45h = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Talk to Councillor Catherine in the north-east of Catherby to receive a new form 7r4-5h.");
-		signForm7r45h = new DetailedQuestStep(this, "Use form 7r4-5h on the Catherby Mayor.", hasForm7r45h.highlighted(), hasMayor.highlighted());
-		showCatherineForm = new NpcStep(this, NpcID.CURRENT_AFFAIRS_COUNCILLOR, new WorldPoint(2825, 3454, 0), "Show Councillor Catherine signed form 7r4-5h.", hasForm7r45hSigned);
-
-		giveArheimNews = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Give Arhein on the Catherby docks the good news.", true);
-		giveArheimNews.addDialogStep("The by-law has been changed!");
-
-		getDuck = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Get a new duck from Arhein on the Catherby docks.", true);
-		getDuck.addDialogStep("About that duck...");
-
-		followThatDuck = new DetailedQuestStep(this, new WorldPoint(2802, 3322, 0), "Follow that Duck! It'll end up south-west of Entrana."); //It ends up at (2802,3322,0)
-		showCurrentsArhein = new NpcStep(this, NpcID.ARHEIN, new WorldPoint(2803, 3430, 0), "Share what you've learned with Arhein on the Catherby docks.", true);
-		showCurrentsArhein.addDialogStep("I've charted the currents!");
+		return List.of(
+			charcoalRequirement,
+			coinsRequirement
+		);
 	}
 
 	@Override
@@ -254,31 +335,18 @@ public class CurrentAffairs extends BasicQuestHelper
 	}
 
 	@Override
-	public List<ItemRequirement> getItemRequirements()
-	{
-		return Arrays.asList(charcoalRequirement, coinsRequirement);
-	}
-
-	@Override
-	public List<Requirement> getGeneralRequirements()
-	{
-		return List.of(
-			new QuestRequirement(QuestHelperQuest.PANDEMONIUM, QuestState.FINISHED),
-			new SkillRequirement(Skill.SAILING, 22, false),
-			new SkillRequirement(Skill.FISHING, 10, false)
-		);
-	}
-
-	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Arrays.asList(new ExperienceReward(Skill.SAILING, 1400), new ExperienceReward(Skill.FISHING, 1000));
+		return List.of(
+			new ExperienceReward(Skill.SAILING, 1400),
+			new ExperienceReward(Skill.FISHING, 1000)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Arrays.asList(
+		return List.of(
 			new ItemReward("Current Duck", ItemID.SAILING_CHARTING_CURRENT_DUCK),
 			new ItemReward("Mayor of Catherby", ItemID.CURRENT_AFFAIRS_MAYOR_OF_CATHERBY),
 			new ItemReward("Sawmill Coupon (oak plank)", ItemID.SAWMILL_COUPON, 25)
@@ -288,17 +356,52 @@ public class CurrentAffairs extends BasicQuestHelper
 	@Override
 	public List<UnlockReward> getUnlockRewards()
 	{
-		return Arrays.asList(
-			new UnlockReward("Access to charting currents"));
+		return List.of(
+			new UnlockReward("Access to charting currents")
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Arhein's employee", Arrays.asList(startQuest, talkToCouncillor, fillFormCr4p, handOverFormCr4p, talkAfterFormHandedIn), charcoalRequirement));
-		allSteps.add(new PanelDetails("A new mayor", Arrays.asList(talkToArhein, talkToHarry, fishInAquarium, showArheinMayor, showCatherineMayor, doAudit, getForm7r45h, signForm7r45h, showCatherineForm, giveArheimNews), coinsRequirement));
-		allSteps.add(new PanelDetails("Map the currents!", Arrays.asList(cBoardShip, sailToStart, followThatDuck, showCurrentsArhein), hasDuck));
-		return allSteps;
+		var sections = new ArrayList<PanelDetails>();
+
+		sections.add(new PanelDetails("Arhein's employee", List.of(
+			startQuest,
+			talkToCouncillor,
+			fillFormCr4p,
+			handOverFormCr4p,
+			talkAfterFormHandedIn
+		), List.of(
+			charcoalRequirement
+		)));
+
+		sections.add(new PanelDetails("A new mayor", List.of(
+			talkToArhein,
+			talkToHarry,
+			fishInAquarium,
+			showArheinMayor,
+			showCatherineMayor,
+			doAudit,
+			getForm7r45h,
+			signForm7r45h,
+			showCatherineForm,
+			giveArheimNews
+		), List.of(
+			coinsRequirement
+		)));
+
+		sections.add(new PanelDetails("Map the currents!", List.of(
+			cBoardShip,
+			sailToStart,
+			releaseDuck,
+			followThatDuck,
+			collectDuck,
+			showCurrentsArhein
+		), List.of(
+			hasDuck
+		)));
+
+		return sections;
 	}
 }
